--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,12 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       # If you have committed your Cargo.lock file to version control
       # delete this step.
-      # - run:
-      #     name: Calculate dependencies
-      #     command: cargo generate-lockfile
-      # - restore_cache:
-      #     keys:
-      #       - v1-cargo-cache-{{ arch }}-{{ checksum "Cargo.lock" }}
+      - run:
+          name: Calculate dependencies
+          command: cargo generate-lockfile
+      - restore_cache:
+          keys:
+            - v1-cargo-cache-{{ arch }}-{{ checksum "Cargo.lock" }}
       - run:
           name: Build all targets
           command: cargo build
