change ci security cargo path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: Cache permission
           command: |
-            sudo chown -R $(whoami):$(id -ng) /usr/local/cargo
+            sudo chown -R $(whoami):$(id -ng) /etc/cargo
       - restore_cache:
           keys:
             - v1-cargo-audit-{{ arch }}
@@ -53,7 +53,7 @@ jobs:
           command: cargo install cargo-audit
       - save_cache:
           paths:
-            - /usr/local/cargo
+            - /etc/cargo
           key: v1-cargo-audit-{{ arch }}
       - run:
           name: Check for known security issues in dependencies
