--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,20 +41,20 @@ jobs:
       - run:
           name: Version information
           command: rustc --version; cargo --version; rustup --version
-      - run:
-          name: Cache permission
-          command: |
-            sudo chown -R $(whoami):$(id -ng) /etc/cargo
-      - restore_cache:
-          keys:
-            - v1-cargo-audit-{{ arch }}
+      # - run:
+      #     name: Cache permission
+      #     command: |
+      #       sudo chown -R $(whoami):$(id -ng) /etc/cargo
+      # - restore_cache:
+      #     keys:
+      #       - v1-cargo-audit-{{ arch }}
       - run:
           name: Install dependency auditing tool
           command: cargo install cargo-audit
-      - save_cache:
-          paths:
-            - /etc/cargo
-          key: v1-cargo-audit-{{ arch }}
+      # - save_cache:
+      #     paths:
+      #       - /etc/cargo
+      #     key: v1-cargo-audit-{{ arch }}
       - run:
           name: Check for known security issues in dependencies
           command: cargo audit
