--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ serde = "1.0.145"
 config = "0.13.2"
 chrono = "0.4.22"
 uuid = { version = "1.1.2", features = ["v4"] }
+env_logger = "0.9.1"
+log = "0.4.17"
 
 [dependencies.sqlx]
 version = "0.6.2"
