--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,12 @@ serde = "1.0"
 config = "0.13"
 chrono = "0.4"
 uuid = { version = "1.1", features = ["v4"] }
-env_logger = "0.9"
 log = "0.4"
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
+once_cell = "1"
 
 [dependencies.sqlx]
 version = "0.6.2"
