--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -1,4 +1,5 @@
-application_port: 8000
+application:
+  port: 8000
 database:
   host: "free-tier8.aws-ap-southeast-1.cockroachlabs.cloud"
   port: 26257
