--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ once_cell = "1"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.6"
 unicode-segmentation = "1"
+validator = "0.16"
+tokio-test = "0.4"
 
 [dependencies.sqlx]
 version = "0.6.2"
