add try_into for subscribe

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ tracing-actix-web = "0.6"
 unicode-segmentation = "1"
 validator = "0.16"
 tokio-test = "0.4"
+fake = "2.5"
+quickcheck = "1.0"
+quickcheck_macros = "1.0"
 
 [dependencies.sqlx]
 version = "0.6.2"
